--- a/styles.css
+++ b/styles.css
@@ -21,24 +21,37 @@ header h1 {
 main {
     flex: 1;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
 }
 
-#playButton {
+#playButton, #bunPayButton {
     width: 200px;
     height: 50px;
-    background-color: #0000ff;
     color: white;
     border: none;
     border-radius: 25px;
     box-shadow: 2px 2px 4px #aaaaaa;
     font-size: 16px;
     cursor: pointer;
+    margin: 10px;
+}
+
+#playButton {
+    background-color: #0000ff;
 }
 
 #playButton:hover {
     background-color: #0000cc;
+}
+
+#bunPayButton {
+    background-color: #8bdce8;
+}
+
+#bunPayButton:hover {
+    background-color: #76c7d2;
 }
 
 footer {
@@ -47,4 +60,5 @@ footer {
     padding: 10px;
     font-size: 14px;
 }
+
 
